// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ComparatorContainer /> should show error correctly 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "minHeight": "10rem",
    }
  }
>
  Error
</div>
`;

exports[`<ComparatorContainer /> should show loading correctly 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "minHeight": "10rem",
    }
  }
>
  <div
    className="loading -xlarge"
  >
    <svg
      className="loading--svg"
      viewBox="-75 -75 150 150"
    >
      <circle
        className="loading--stroke"
        cx="0"
        cy="0"
        r="37.5"
      />
    </svg>
  </div>
</div>
`;
